# SwanLab-Dashboard

./: .eslintignore  .gitignore  README.md  build_pypi.py  jsconfig.json  package.json  pyproject.toml  requirements-dev.txt  requirements.txt  vite.config.js
.github/workflows/: publish-to-pypi.yml
server/: __init__.py  settings.py
swanboard/: __init__.py  app.py  callback.py  package.json  settings.py
swanboard/compat/server/controller/: experiment.py
swanboard/controller/: chart.py  db.py  experiment.py  project.py
swanboard/controller/utils/: charts.py  tag.py
swanboard/db/: db_connect.py  migrate.py  model.py
swanboard/db/models/: experiments.py  projects.py  tags.py
swanboard/middleware/: common.py
swanboard/router/: experiment.py  media.py
swanboard/run/: __init__.py  run.py  utils.py
swanboard/template/: index.html
swanboard/template/assets/: ChartPage-DgOOkrVh.css  ChartPage-PkZaYRbu.js  ChartsView-DT9ukZVt.js  EnvHardware-Do6oCpUw.js  EnvIndex-DBUarR68.js  EnvItems-BfjcRO-X.css  EnvItems-COiIE-CU.js  EnvRequirements-BqyzUHLZ.css  EnvRequirements-CFmo-GrN.js  EnvironmentPage-C6uSuWBq.css  EnvironmentPage-CfRBh-U_.js  ExperimentView-CCDMXo4h.css  ExperimentView-DzJOULEZ.js  FuncBar-DgVTuZfd.css  FuncBar-jsw0fMbt.js  HelpView-IzdFkzel.js  HomeView-BS7FyMAt.css  HomeView-Cj0L31Z_.js  IndexPage-BVWCU5c1.js  IndexPage-C5dvtib2.css  LogPage-BmSUtDni.js  LogPage-DBzoauOW.css  NotFound-5psGzOjg.js  SLLoading-DNmSjfVT.js  SLStatusLabel-BRacn5XK.css  SLStatusLabel-CvQbZ0sr.js  chart-rmLuqf_x.js  chart-yHANKI3B.css  index-CSrWMW-P.js  index-pL_vrb0v.css
swanboard/utils/: __init__.py  file.py  font.py  log.py  package.py  time.py
test/: create_error_chart.py  create_experiment.py  start_server.py
test/unit/: conftest.py
test/unit/controller/: pytest_experiment.py
test/unit/controller/chart/: pytest_chart.py
test/unit/controller/experiment/: pytest_experiment.py
test/unit/controller/namespace/: pytest_namespace.py
test/unit/controller/project/: pytest_project.py
test/unit/controller/utils/: utils.py
test/unit/db/: models.py  pytest_connect.py  pytest_models.py  pytest_project.py  test_connect.py  test_experiment.py  test_migrate.py  test_swanmodel.py
test/unit/setup/: mock.py  test_mock.py  test_setup.py
test/unit/utils/: package.py  pytest_file.py  pytest_font.py  test_file.py  test_font.py  test_package.py
tutils/: __init__.py  config.py  env.py  mock.py  parse.py  setup.py
vue/: .env  index.html
vue/docs/: chart.js  setup.d.js
vue/src/: App.vue
vue/src/api/: http.js
vue/src/board/: ChartsBoard.vue  README.md  charts.d.js  charts.js  smooth.bak.js  smooth.js  store.js  utils.js
vue/src/board/.charts/: index.js  toolkit.js
vue/src/board/chart/: ChartWrapper.vue  utils.js
vue/src/board/charts/: index.js  toolkit.js
vue/src/board/components/: BoardToolbar.vue  SectionsWrapper.vue  SharedComponent.vue  SmoothComponent.vue
vue/src/board/download/: LineChartDownload.vue  index.js
vue/src/board/edit/: .gitkeep
vue/src/board/i18n/: chart.cn.json  chart.en.json
vue/src/board/puzzle/: ChartPreviewPuzzle.vue  ChartPuzzle.vue  SectionPuzzle.vue
vue/src/board/toolbar/: ChartToolbar.vue  EmptyToolbar.vue  index.js  (+1 more)
vue/src/charts/: ChartsDashboard.vue
vue/src/docs/: chart.js  index.js
vue/src/i18n/: index.js
vue/src/layouts/: ExperimentLayout.vue
vue/src/router/: index.js
vue/src/store/: index.js
vue/src/utils/: chart.js  time.js
vue/test/: example.test.js
vue/test/utils/: chart.test.js  common.test.js
(+85 files in other folders)
